--- a/src/main/webapp/assets/styles/sujerirEmpreendimento.css
+++ b/src/main/webapp/assets/styles/sujerirEmpreendimento.css
@@ -71,6 +71,11 @@ textarea {
 	margin-right: 2rem;
 }
 
+.input-select{
+	padding: .2rem .3rem;
+	font-size: 16px
+}
+
 button {
 	background-color: #002266;
 	color: white;
